--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<!-- My style sheet--Must be after bootstrap -->
 		<!-- <link rel="stylesheet" href="example"> -->
 		<link rel="stylesheet" href="stylesheet/style.css">
+		<link rel="stylesheet" href="stylesheet/home_page.css"
 		
 		
 		<!------------------------------------------------------------->
@@ -55,9 +56,9 @@
 				</header>
 			</div>
 
-				<div class="row">
-					<div class="col-lg-8">						
-						<section class="col-lg-4 col-md-4">		
+				<div class="row mid-container">
+					<div id="home-left-container" class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-xs-12" >
+						<section class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">		
 							<h1>Website Design</h1>
 							<p>The visual layout and style of your website is important.  There are many
 								aspects that must be thought about during the planning phase such as branding,
@@ -70,7 +71,7 @@
 								ultimately, promote the interests of the owning organization.</p>							
 						</section> <!-- end left-column -->
 				
-						<section class="col-lg-4 col-md-4">
+						<section class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
 							<h1>Website Deployment</h1>
 							<p>Where or how will you host your website?  There are many options, but it comes 
 								down your needs and requirements.  I can advise and provide options for
@@ -85,7 +86,7 @@
 							</ul>
 						</section> <!-- end middle-column -->
 
-						<section class="col-lg-4 col-md-4">
+						<section class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
 							<h1>Website Optimization</h1>
 							<p>Using good practices and anlytics to increase traffic to your website is the 
 								best way to spread your message and introduce new users to your products.  
@@ -102,8 +103,8 @@
 						</section> <!-- end right-column -->
 					</div> <!-- end main-left content -->
 
-					<div class="col-lg-4"><!-- side content on right side -->	
-						<aside  class="col-lg-12 col-md-12">
+					<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12"><!-- side content on right side -->	
+						<aside  class="sidebar col-xl-12 col-xl-offset-0 col-lg-12 col-lg-offset-0 col-md-12 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
 							<h1>Blog</h1>
 							<iframe src="https://hastingslweb2.wordpress.com/"></iframe>
 						</aside>
@@ -114,8 +115,9 @@
 			<!-- To keep footer on window bottom if page height is short-->
 			<!--<div id="push"></div>-->
 
+			<div class="bottom-line"></div>
 			<!-- footer -->
-			<footer class="hastings-footer">
+			<footer>
 				
 				<nav class="main-nav">
 						<a href="index.html">Home</a>
