--- a/portfolio_pages/calculator.html
+++ b/portfolio_pages/calculator.html
@@ -14,7 +14,7 @@
 		<!------------------------------------------------------------->
 		
 		<!-- My style sheet--Must be after bootstrap -->
-		<link rel="stylesheet" href="../stylesheet/style.css"> 
+		<link rel="stylesheet" href="../stylesheet/calc_page.css"> 
 		
 		<!------------------------------------------------------------->
 		
@@ -35,37 +35,6 @@
 	<!-- whole site container -->
 	<body>
 
-		<!-- top container for header, name, and contact-resume -->
-		<div id="strap">
-
-			<!-- header, mainly contains nav bar -->
-			<header id="template-head">
-
-				<nav class="main-nav">
-					<a href="../index.html">Home</a>
-					<a href="../secondary_pages/about.html">About</a>
-					<a href="../secondary_pages/blog.html">Blog</a>
-					<a href="../docs/IT_Resume(NHCS).pdf">Resume</a>
-				</nav>
-
-			</header>
-
-			<!-- provisions, name, & contact-resume -->
-			<section id="info">
-
-				<p id="provisions">
-					Website Design and Development
-				</p>
-				<p id="name">
-					Larry Hastings
-				</p>
-				<p id="second-nav">
-					<a href="contact.html">Contact</a>
-				</p>
-
-			</section>
-
-		</div>
 
 		<!-- Contains everything between strap and push(above footer) -->
 		<section id="calc">
@@ -97,25 +66,36 @@
 					<section id="nine" class="number-button"><p>9</p></section>
 				</section>
 			</div>
+			<script>
+				const one = getElementById("one");
+				const two = getElementById("two");
+				const three = getElementById("three");
+				const four = getElementById("four");
+				const five = getElementById("five");
+				const six = getElementById("six");
+				const seven = getElementById("seven");
+				const eight = getElementById("eight");
+				const nine = getElementById("nine");
+
+				const mult = getElementById("multiplication");
+				const divide = getElementById("divide");
+				const plus = getElementById("plus");
+				const minus = getElementById("minus");
+				const equals = getElementById("equals");
+
+				let display = 0;
+
+				function sum(){
+
+				};
+
+				document.getElementById("calc-window").innerHTML = display;
+				alert(display);
+			</script>
+
 		</section><!-- end mid-container -->
 
-		<!-- To keep footer on window bottom -->
-		<!-- <div id="push"></div> -->
-
-		<!-- footer -->
-		<footer id="template-foot">
-
-			<nav class="main-nav">
-				<a href="../index.html">Home</a>
-				<a href="../secondary_pages/about.html">About</a>
-				<a href="../secondary_pages/blog.html">Blog</a>
-				<a href="../docs/IT_Resume(NHCS).pdf">Resume</a>
-			</nav>
-			<p>
-				Design by Larry Hastings
-			</p>
-
-		</footer>
+		
 
 
 
