--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<a href="index.html">Home</a>
 						<a href="secondary_pages/about.html">About</a>
 						<a href="secondary_pages/blog.html">Blog</a>
-						<a href="docs/IT_Resume(NHCS).pdf">Resume</a>	
+						<a href="docs/IT_Resume(NHCS).docx">Resume</a>	
 					</nav>
 					<!-- contact info -->
 					<div id="my-info">
@@ -57,8 +57,8 @@
 			</div>
 
 				<div class="row mid-container">
-					<div id="home-left-container" class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-xs-12">
-						<section class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">		
+					<div id="home-left-container" class="col-md-8  col-xs-12">
+						<section class="col-md-4  col-xs-12">		
 							<h1>Website Design</h1>
 							<p>The visual layout and style of your website is important.  There are many
 								aspects that must be thought about during the planning phase such as branding,
@@ -71,7 +71,7 @@
 								ultimately, promote the interests of the owning organization.</p>							
 						</section> <!-- end left-column -->
 				
-						<section class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
+						<section class="col-md-4  col-xs-12">
 							<h1>Website Deployment</h1>
 							<p>Where or how will you host your website?  There are many options, but it comes 
 								down your needs and requirements.  I can advise and provide options for
@@ -86,7 +86,7 @@
 							</ul>
 						</section> <!-- end middle-column -->
 
-						<section class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12">
+						<section class="col-md-4  col-xs-12">
 							<h1>Website Optimization</h1>
 							<p>Using good practices and anlytics to increase traffic to your website is the 
 								best way to spread your message and introduce new users to your products.  
@@ -103,8 +103,8 @@
 						</section> <!-- end right-column -->
 					</div> <!-- end main-left content -->
 
-					<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12"><!-- side content on right side -->	
-						<aside  class="sidebar col-xl-12 col-xl-offset-0 col-lg-12 col-lg-offset-0 col-md-12 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
+					<div class="col-md-4  col-xs-12"><!-- side content on right side -->	
+						<aside  class="sidebar col-md-12 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
 							<h1>Blog</h1>
 							<iframe src="https://hastingslweb2.wordpress.com/"></iframe>
 						</aside>
