--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<a href="index.html">Home</a>
 						<a href="secondary_pages/about.html">About</a>
 						<a href="secondary_pages/blog.html">Blog</a>
-						<a href="docs/IT_Resume(NHCS).docx">Resume</a>	
+						<a href="docs/IT_Resume(NHCS).pdf">Resume</a>	
 					</nav>
 					<!-- contact info -->
 					<div id="my-info">
