--- a/portfolio_pages/calculator.html
+++ b/portfolio_pages/calculator.html
@@ -47,23 +47,24 @@
 			
 			<div><!-- Calculator button container -->
 				<section id="calc-operators">
-					<section id="multiplication" class="operator-button"><p>X</p></section>
-					<section id="divide" class="operator-button"><p>/</p></section>
-					<section id="plus" class="operator-button"><p>+</p></section>
-					<section id="minus" class="operator-button"><p>-</p></section>
-					<section id="equals" class="operator-button"><p>=</p></section>
+					<div id="multiplication" class="operator-button"><p>X</p></div>
+					<div id="divide" class="operator-button"><p>/</p></div>
+					<div id="plus" class="operator-button"><p>+</p></div>
+					<div id="minus" class="operator-button"><p>-</p></div>
+					<div id="equals" class="operator-button"><p>=</p></div>
 				</section>
 				
 				<section id="calc-numbers">
-					<section id="one" class="number-button"><p>1</p></section>
-					<section id="two" class="number-button"><p>2</p></section>
-					<section id="three" class="number-button"><p>3</p></section>
-					<section id="four" class="number-button"><p>4</p></section>
-					<section id="five" class="number-button"><p>5</p></section>
-					<section id="six" class="number-button"><p>6</p></section>
-					<section id="seven" class="number-button"><p>7</p></section>
-					<section id="eight" class="number-button"><p>8</p></section>
-					<section id="nine" class="number-button"><p>9</p></section>
+					<div id="one" class="number-button"><p>1</p></div>
+					<div id="two" class="number-button"><p>2</p></div>
+					<div id="three" class="number-button"><p>3</p></div>
+					<div id="four" class="number-button"><p>4</p></div>
+					<div id="five" class="number-button"><p>5</p></div>
+					<div id="six" class="number-button"><p>6</p></div>
+					<div id="seven" class="number-button"><p>7</p></div>
+					<div id="eight" class="number-button"><p>8</p></div>
+					<div id="nine" class="number-button"><p>9</p></div>
+					<div id="zero" class="number-button"><p>0</p></div>
 				</section>
 			</div>
 			<script>
