--- a/angular2Convert/myLive-Site/src/index.html
+++ b/angular2Convert/myLive-Site/src/index.html
@@ -1,7 +1,26 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
+
+    <meta charset="UTF-8">
+		<!-- IE Edge Meta Tag-IE 8 and beyond-Equivalent to html5 doctype -->
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<!-- Mobile display adaption-No shrinkage-Breakpoint adaptable -->
+		<meta name="viewport" content="widith=device-width, initial-scale=1">
+		<!-- Latest compiled and minified CSS-Bootstrap CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
+		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+			
+		<!-- Optional theme-Extra bootstrap CSS feature-Smoother Gradients-->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" 
+		integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+		
+		<!-- Optional IE8 Support-Help with newer HTML5 tags and responsive breakpoints -->
+		<!--[if lt IE 9]>
+			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
+ 
   <title>MyLiveSite</title>
   <base href="/">
 
@@ -10,5 +29,15 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
+
+
+  <!-- Begin script insertions-jQuery, javascript, etc... -->
+		<script
+			src="https://code.jquery.com/jquery-3.1.1.min.js"
+			integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+			crossorigin="anonymous"></script>
+		<!-- Latest compiled and minified JavaScript for Bootstrap -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
+		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
