--- a/angular2Convert/myLive-Site/src/index.html
+++ b/angular2Convert/myLive-Site/src/index.html
@@ -22,7 +22,7 @@
 	<title>My App</title>
 	<base href="/">
   	<!-- Mobile display adaption-No shrinkage-Breakpoint adaptable -->
-	<meta name="viewport" content="widith=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
   	<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
