--- a/angular2Convert/my-site/src/index.html
+++ b/angular2Convert/my-site/src/index.html
@@ -26,15 +26,15 @@
 </head>
 <body>
     <app-root>Loading...</app-root>
-
   <!-- Begin script insertions-jQuery, javascript, etc... -->
-		<script
-			src="https://code.jquery.com/jquery-3.1.1.min.js"
-			integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+		<!--JQuery-->
+		<script	src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
 			crossorigin="anonymous"></script>
 		<!-- Latest compiled and minified JavaScript for Bootstrap -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
 		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		<!--math.js minified -->
+		<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjs/3.8.1/math.min.js' type='text/javascript'></script>
 </body>
 </html>
 
