--- a/angular2Dev/recipe-finder/src/index.html
+++ b/angular2Dev/recipe-finder/src/index.html
@@ -39,16 +39,14 @@
 
     <!--Global Footer-->
     <footer>
-		<nav class="navbar navbar-fixed-bottom">
-			<div class="container">
-				<div class="col-xs-12">
-					<ul class="nav navbar-nav">
-							<li class="active"><a class=foot-links href="">Home</a></li>
-							<li><a class="foot-links" href="">About</a></li>
-					</ul>
+			<nav class="navbar navbar-fixed-bottom">
+				<div class="container-fluid">
+						<ul class="nav navbar-nav">
+								<li><a class="logo" href="">Home</a></li>
+								<li><a class="logo" href="">About</a></li>
+						</ul>
 				</div>
-			</div>
-		</nav>
+			</nav>
     </footer>
 
     <!-- Begin script insertions-jQuery, javascript, etc... -->
