--- a/angular2Dev/recipe-finder/src/index.html
+++ b/angular2Dev/recipe-finder/src/index.html
@@ -34,9 +34,11 @@
 			</form>
 		</div>
     </header>
-
-    <app-root>Loading...</app-root>
-
+		<div class="content-container">
+			<div class="container-fluid">
+    		<app-root>Loading...</app-root>
+			</div>
+		</div>
     <!--Global Footer-->
     <footer>
 			<nav class="navbar navbar-fixed-bottom">
