--- a/angular2Dev/recipe-finder/src/index.html
+++ b/angular2Dev/recipe-finder/src/index.html
@@ -39,7 +39,7 @@
 		</div>
     <!--Global Footer-->
     <footer class="container-fluid">
-			<nav class="navbar navbar-fixed-bottom clearfix">
+			<nav class="navbar navbar-bottom clearfix">
 				<div>
 						<ul class="nav navbar-nav">
 								<li><a class="logo" href="">Home</a></li>
