--- a/angular2Dev/recipe-finder/src/index.html
+++ b/angular2Dev/recipe-finder/src/index.html
@@ -49,6 +49,7 @@
 									<li><a class="logo" href="">Home</a></li>
 									<li><a class="logo" href="">About</a></li>
 									<li><a class="logo" href="">Contribute</a></li>
+									<li><a class="logo" href="">Contact</a></li>
 							</ul>
 					</div>
 				</nav>
