--- a/angular2Dev/recipe-finder/src/index.html
+++ b/angular2Dev/recipe-finder/src/index.html
@@ -24,7 +24,7 @@
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 	</head>
 	<body>
-		<!--main content above footer-->
+		<!--main container above footer-->
 		<div id="main-wrapper">
 			<!--Global Header-->
 			<header class="container-fluid">
@@ -38,7 +38,7 @@
 			</header>
 			<!--main content-->
 			<div id="content-container" class="container">
-			<app-root>Loading...</app-root>
+				<app-root>Loading...</app-root>
 			</div>
 		</div>
 		<!--Global Footer-->
