--- a/angular2Dev/recipe-finder/src/index.html
+++ b/angular2Dev/recipe-finder/src/index.html
@@ -29,7 +29,7 @@
 			<!--Global Header-->
 			<header class="container-fluid">
 					<div class="clearfix">
-						<div class="col-sm-8"><h1 id="logoh1"><a class="logo" href="">Recipe<br>Finder</a></h1></div>
+						<div class="col-sm-8"><h1 id="logoh1"><a class="logo" href="/welcome">Recipe<br>Finder</a></h1></div>
 						<form class="search-container col-sm-4">
 								<input type="text" placeholder="Search">
 								<button class="logo" type="submit"><span class="glyphicon glyphicon-search"></span></button>
@@ -46,7 +46,7 @@
 				<nav class="clearfix">
 					<div>
 							<ul class="nav navbar-nav">
-									<li><a class="logo" href="">Home</a></li>
+									<li><a class="logo" href="/welcome">Home</a></li>
 									<li><a class="logo" href="">About</a></li>
 									<li><a class="logo" href="">Contribute</a></li>
 									<li><a class="logo" href="">Contact</a></li>
