--- a/nodeDev/recipe-finder/src/index.html
+++ b/nodeDev/recipe-finder/src/index.html
@@ -48,7 +48,7 @@
 							<ul class="nav navbar-nav">
 									<li><a class="logo" href="/welcome">Home</a></li>
 									<li><a class="logo" href="">About</a></li>
-									<li><a class="logo" href="">Contribute</a></li>
+									<li><a class="logo" href="/contribute">Contribute</a></li>
 									<li><a class="logo" href="">Contact</a></li>
 							</ul>
 					</div>
