--- a/nodeDev/recipe-finder/src/index.html
+++ b/nodeDev/recipe-finder/src/index.html
@@ -49,7 +49,7 @@
 									<li><a class="logo" href="/welcome">Home</a></li>
 									<li><a class="logo" href="">About</a></li>
 									<li><a class="logo" href="/contribute">Contribute</a></li>
-									<li><a class="logo" href="">Contact</a></li>
+									<li><a class="logo" href="/contact">Contact</a></li>
 							</ul>
 					</div>
 				</nav>
