--- a/nodeDev/recipe-finder/src/index.html
+++ b/nodeDev/recipe-finder/src/index.html
@@ -47,7 +47,7 @@
 					<div>
 							<ul class="nav navbar-nav">
 									<li><a class="logo" href="/welcome">Home</a></li>
-									<li><a class="logo" href="">About</a></li>
+									<li><a class="logo" href="/about">About</a></li>
 									<li><a class="logo" href="/contribute">Contribute</a></li>
 									<li><a class="logo" href="/contact">Contact</a></li>
 							</ul>
