--- a/photoStorage/src/index.html
+++ b/photoStorage/src/index.html
@@ -15,7 +15,7 @@
   	<link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-    <app-root>Loading...</app-root>
+    <app-root>Insert spinnin loader</app-root>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
